Major improvment:  - Add gulp to enable watching both packages (main app + worker script).  - Simplify the way glitching works.  - Working example altering color channels.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,4 @@
 {
   "node": true,
-  "predef": ["window", "document", "FileReader", "Worker"]
+  "predef": ["window", "document", "FileReader", "Worker", "JSON"]
 }
