--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Glitching in a webapp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "jshint src/",
+    "jscs": "jscs src/",
+    "check": "npm run lint && npm run jscs",
+    "browserify": "gulp browserify",
+    "dev": "gulp watch",
+    "preinstall": "rm -rf build && rm -rf node_modules",
+    "postinstall": "ln -s ../src node_modules/glitch_r"
   },
   "keywords": [
     "glitch",
@@ -16,23 +22,18 @@
   "license": "ISC",
   "dependencies": {
     "dom-delegator": "^12.0.0",
+    "lcg-random": "^1.0.2",
     "rx": "^2.3.22",
     "virtual-dom": "^1.0.0",
-    "virtual-hyperscript": "^4.6.0"
+    "virtual-hyperscript": "^4.6.0",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "browserify": "^8.0.3",
+    "gulp": "^3.8.10",
+    "gulp-uglify": "^1.0.2",
     "jscs": "^1.9.0",
     "jshint": "^2.5.11",
     "watchify": "^2.2.1"
-  },
-  "scripts": {
-    "lint": "jshint src/",
-    "jscs": "jscs src/",
-    "check": "npm run lint && npm run jscs",
-    "browserify": "browserify src/app.js -o dist/js/app.js",
-    "dev": "watchify src/app.js -o dist/js/app.js",
-    "preinstall": "rm -rf build && rm -rf node_modules",
-    "postinstall": "ln -s ../src node_modules/glitch_r"
   }
 }
