--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "jscs": "jscs src/",
     "check": "npm run lint && npm run jscs",
     "browserify": "gulp browserify",
-    "dev": "gulp watch",
+    "dev": "gulp browserify --watch",
     "preinstall": "rm -rf build && rm -rf node_modules",
     "postinstall": "ln -s ../src node_modules/glitch_r"
   },
@@ -30,10 +30,17 @@
   },
   "devDependencies": {
     "browserify": "^8.0.3",
+    "es6ify": "^1.6.0",
     "gulp": "^3.8.10",
+    "gulp-duration": "0.0.0",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.2",
     "jscs": "^1.9.0",
     "jshint": "^2.5.11",
-    "watchify": "^2.2.1"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.2.1",
+    "yargs": "^1.3.3"
   }
 }
