--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lint": "jshint src/",
     "jscs": "jscs src/",
     "check": "npm run lint && npm run jscs",
-    "browserify": "gulp browserify",
-    "dev": "gulp browserify --watch",
+    "browserify": "node build.js",
+    "watchify": "node build.js --watch",
     "preinstall": "rm -rf build && rm -rf node_modules",
     "postinstall": "ln -s ../src node_modules/glitch_r"
   },
@@ -16,7 +16,9 @@
     "glitch",
     "image",
     "javascript",
-    "html5"
+    "html5",
+    "reactive",
+    "es6"
   ],
   "author": "Aurélien Scoubeau",
   "license": "ISC",
@@ -31,15 +33,9 @@
   "devDependencies": {
     "browserify": "^8.0.3",
     "es6ify": "^1.6.0",
-    "gulp": "^3.8.10",
     "gulp-duration": "0.0.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.0.2",
-    "gulp-util": "^3.0.2",
     "jscs": "^1.9.0",
     "jshint": "^2.5.11",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.2.1",
     "yargs": "^1.3.3"
   }
