--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "check": "npm run lint && npm run jscs",
     "browserify": "node build.js",
     "watchify": "node build.js --watch",
-    "preinstall": "rm -rf build && rm -rf node_modules",
-    "postinstall": "ln -s ../src node_modules/glitch_r"
+    "preinstall": "rm -rf build && rm -rf node_modules"
   },
   "keywords": [
     "glitch",
@@ -31,7 +30,7 @@
     "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "browserify": "^8.0.3",
+    "browserify": "^8.1.3",
     "es6ify": "^1.6.0",
     "gulp-duration": "0.0.0",
     "jscs": "^1.9.0",
